@@ -1,3 +1,8 @@
+2007-06-17	Marzo Sette Torres Junior <marzojr@yahoo.com>
+	* Fixed special lights to work again.
+	* Fixed UCC bug where a function's symbol type in the symbol table be
+	  "extern" if the function was externed before being defined.
+
 2007-06-16    <jeff@mini.nerble.net>
 
 	* exult.cc,etc.: Applied Lanaca's PocketPC patches.
